# autoconf-skel

./: .gitignore  README.md  configure.ac
src/: Makefile.am  parse_args.h
tests/: Makefile.am
