# BINARY EXECUTABLE
#AM_CFLAGS = $(WARN_CFLAGS) -I$(top_builddir)/include/krossock/src
#bin_PROGRAMS = $(top_builddir)/bin/program
#__top_builddir__bin_program_SOURCES = program.c
#__top_builddir__bin_program_LDFLAGS = -static-libgcc -static $(top_builddir)/include/krossock/bin/libkrossock.a
#__top_builddir__bin_program_LDADD = -lkrossock -lssl -lcrypto

# LIBRARY
#noinst_LIBRARIES = $(top_builddir)/bin/library.a
#__top_builddir__bin_library_a_SOURCES = library.c
#include_HEADERS = library.h
