VPATH=@srcdir@

# BINARY EXECUTABLE
#AM_CFLAGS = $(WARN_CFLAGS) -I../include/krossock/src
#bin_PROGRAMS = ../bin/program
#___bin_program_SOURCES = program.c
#___bin_program_LDFLAGS = -static-libgcc -static ../include/krossock/bin/libkrossock.a
#___bin_program_LDADD = -lkrossock -lssl -lcrypto

# LIBRARY
#noinst_LIBRARIES = ../bin/library.a
#___bin_library_a_SOURCES = library.c
#include_HEADERS = library.h
